--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -15,7 +15,7 @@ workflows:
             git config user.email "atlantis@example.com"
             git add terraform.tfstate terraform.tfstate.backup || true
             git commit -m "Update local Terraform state [skip ci]" || echo "No changes to commit"
-            git push origin HEAD:${ATLANTIS_PULL_HEAD_BRANCH}
+            git push origin HEAD:${HEAD_BRANCH_NAME}
 projects:
   - name: project1
     dir: project1
