--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -10,12 +10,15 @@ workflows:
         - apply
         - run: |
             echo "Committing updated local state"
-            env > /tmp/atlantisenv
             git config user.name "atlantis"
             git config user.email "atlantis@example.com"
-            git add terraform.tfstate terraform.tfstate.backup || true
-            git commit -m "Update local Terraform state [skip ci]" || echo "No changes to commit"
-            git push origin HEAD:${HEAD_BRANCH_NAME}
+            git add terraform.tfstate terraform.tfstate.backup
+            if git diff --cached --quiet; then
+               echo "No changes to commit, skipping push"
+               exit 0
+            fi
+            git commit -m "Update local Terraform state [skip ci]"
+            git push origin "HEAD:${HEAD_BRANCH_NAME}"
 projects:
   - name: project1
     dir: project1
