--- a/server/repos.yaml
+++ b/server/repos.yaml
@@ -3,7 +3,7 @@ repos:
     allow_custom_workflows: false
     allowed_overrides: []
     workflow: local-state
-    apply_requirements: [mergeable]
+    apply_requirements: [mergeable, undiverged]
 
 workflows:
   local-state:
